# ftp-cmd-list-parse

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: entry.rs  expressions.rs  lib.rs
src/entry/: msdos.rs  unix.rs
tests/: msdos.rs  unix.rs
