[package]
name = "ftp-cmd-list-parse"
version = "0.1.0"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Parses an output of LIST ftp command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.3.9"
lazy_static = "^1.4.0"
chrono = "^0.4.15"
