[package]
name = "ftp-cmd-list-parse"
version = "0.3.1"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parses an output of LIST ftp command"
keywords = ["ftp"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
lazy_static = "1.4"
